fix(layout): toggleable layout title now aligns with persistent layouts
The toggleable layouts had the title 1.5rem instead of 1rem from the
left of the "drawer"/sheet.

--- a/packages/layout/src/_mixins.scss
+++ b/packages/layout/src/_mixins.scss
@@ -106,11 +106,11 @@
 
   .rmd-layout-nav-toggle {
     &--offset {
+      $title-margin: $rmd-app-bar-title-nav-margin -
+        ($rmd-app-bar-lr-margin * 2);
       $nav-size: rmd-layout-theme-var(nav-width);
       $icon-size: rmd-button-theme-var(icon-size);
-      $distance: calc(
-        #{$rmd-app-bar-title-nav-margin} + #{$nav-size} - #{$icon-size}
-      );
+      $distance: calc(#{$title-margin} + #{$nav-size} - #{$icon-size});
 
       @include rmd-utils-rtl-auto(
         margin-right,
